# ccmux-core-telegram

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-12-cct-mvp.md  2026-05-13-cct1-deaderror-catch.md  2026-05-13-start-rebind-ux.md
docs/superpowers/specs/: 2026-05-12-ccmux-core-telegram-mvp-design.md  2026-05-13-cct1-deaderror-catch-design.md  2026-05-13-start-rebind-ux-design.md
src/ccmux_core_telegram/: __init__.py  _version.py  binding.py  config.py  handler.py  main.py  picker.py  render.py  runtime.py
tests/: conftest.py  test_binding_api.py  test_binding_atomic_write.py  test_config_accessors.py  test_config_loaders.py  test_config_parser.py  test_e2e_smoke.py  test_handler_build.py  test_init_import_order.py  test_main.py  test_picker_filter.py  test_picker_keyboard.py  test_picker_on_start.py  test_picker_pick.py  test_picker_steal.py  test_render.py  test_runtime_inbound.py  test_runtime_outbound.py  test_runtime_post_init.py  test_runtime_post_shutdown.py  test_runtime_state.py
